--- a/app/index.html
+++ b/app/index.html
@@ -6,21 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/exclusr.css">
   
   <title>Exclusr Web App</title>
 </head>
 <body>
-  <div ng-view="">
+  <div class="container", ng-view="">
   </div>
 
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.5.0/lodash.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
+  <script src="/lib/is.min.js"></script>
   <script src="/lib/ngStorage.js"></script>
   <script src="/scripts/app.js"></script>
   <script src="/scripts/controllers.js"></script>
